*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9049 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -165,9 +165,45 @@ foxtrick.PlayerFilters.desc=﻿Tilføj på spillertrup side et tilvalgs felt til
 foxtrick.HistoryStats.desc=Udarbejder en oversigt over holdets historie.
 foxtrick.LargeFlags.desc=Forstør flag på spillerens side, hvis ansigter er vist (kan gå ned på GNU / Linux)
 foxtrick.GoToPostBox.desc=Tilføjer en GåTilIndlægX boks til forum side. Skjuler HT's 'Markere som ulæst fra'\!\!Du kan bruge 'Markér ulæst' modul til at have denne funktion i indlæggets fodnote.
+foxtrick.TeamSelectBox.desc=Erstatter spillere listen med en rullemenu på spillere side. Du skifter visning ved, at klikke på overskriften "Oversigt".
+foxtrick.CopyPlayerAd.desc=En knap på spillerens side til kopiering af hans detaljer (i HT-ML).
+foxtrick.CopyPlayerAd.Sorted.desc=Sortere evner i faldende rækkefølge.
+foxtrick.CopyPlayerAd.NonTableStyle.desc=Kopiere almindelig uden tabeller.
+foxtrick.CustomMedals.desc=Erstatter de nye Hattrick medaljer med dem i den gamle stil
+foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Vis kun på andre hold sider
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Vis på alle sider
 #ExtendedPlayerDetails
+foxtrick.ExtendedPlayerDetails.desc=Viser nogle nyttige oplysninger i spiller detaljer
+foxtrick.ExtendedPlayerDetails.SWD.desc=Vis kontraktens varighed som sæsoner - uger - dage
+foxtrick.ExtendedPlayerDetails.SW.desc=Vis kontraktens varighed som sæsoner - uger
+foxtrick.ExtendedPlayerDetails.SD.desc=Vis kontraktens varighed som sæsoner - uger
+foxtrick.ExtendedPlayerDetails.WD.desc=Vis kontraktens varighed som uger - dage
+foxtrick.ExtendedPlayerDetails.D.desc=Vis kontraktens varighed som dage
+foxtrick.ExtendedPlayerDetailsWage.desc=Viser løn uden bonus og/eller sæsonbestemte løn
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Viser løn uden bonus
+foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Viser sæsonbestemte løn
+foxtrick.FixcssProblems.desc=Løser nogle problemer med forkert HT css-typografier
+foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Retter usynlige FoxLink billeder i indlægs overskrifter
+foxtrick.FixcssProblems.HideInvitation.desc=Skjul invitation feltet som er synlig på bunden af undermenuen
+foxtrick.FixcssProblems.Page_Minimum_Height.desc=Retter side hop når ingen rullepanel vises
+foxtrick.FixcssProblems.RTL_Fixes.desc=Løser nogle HT fejl for sprog med højre til venstre-skrivning
+foxtrick.FixcssProblems.ForumScrollBarFix.desc=Tilføjer fast rullepanel til forum. Mindre flimmer end HT indstillinger
+foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Øg skriftstørrelsen for HT's 'små skrifttype' format.
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Fjern 'Forum smug kig' fra alle sider.
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Brug automatisk min.-højde for kalender til at reducere plads.
+foxtrick.SimplePresentation.desc=Yderligere præsentationsindstillinger
+foxtrick.SimplePresentation.League_Table.desc=Tilføjer lodrette linjer til liga tabel for lettere læsning
+foxtrick.SimplePresentation.Guestbook.desc=Øger læsbarheden i gæstebogen (meddelelses afsnit med grå baggrund)
+foxtrick.SimplePresentation.liveHighlightRed.desc=Fremhæver nye hændelser med rødt i HT Live
+foxtrick.SimplePresentation.HideAchievementsIcons.desc=Skjuler ikoner på bedrifts siden
 foxtrick.SimplePresentation.NoLogo.desc=Skjuler Hold logoer
+foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Fremhæver HT personale på alle sider
+foxtrick.ForumPresentation.desc=Ekstra Forum præsentationsindstillinger
+foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Fjerner bruger flag fra Forum indlægs overskrifter
+foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Fjerner bruger serie fra Forum indlægs overskrifter
+foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Viser altid indholdet af spoilere
+foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Vis antallet af nye indlæg i parentes efter total indlæg
+foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Vis ikoner i stedet for teksthyperlinks i forum indlæg
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.Prefs.desc=Link til Indstillings side
 foxtrick.ExtraShortcuts.ManageCHPP.desc=Link til CHPP indstillings side
@@ -641,7 +677,6 @@ sort.up=Op
 sort.down=Ned
 action.clearCache=Ryd cache
 action.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysninger fra Hattrick servere efter behov. Indtil du lukker din browser, vil FoxTrick efterfølgende, bruge lokalt lagrede kopier af disse oplysninger. I sjældne tilfælde kan oplysningerne blive forældet. Ryd cache, hvis du ønsker FoxTrick skal hente de ekstra informationer igen.
-featureHighlight.title=﻿Klik for at fremhæve de fleste af Foxtricks funktioner
 
 # fennec ui
 pageAction.rightSidebar=Vis højre bjælke
@@ -655,13 +690,14 @@ pageAction.all=Vis alt
 
 
 
+# keep the following line untranslated
+
 # End of IN-GAME STRINGS.
 
 
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-# keep the following line untranslated
 
 
 
@@ -670,6 +706,7 @@ pageAction.all=Vis alt
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
+
 
 
 
