--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -300,35 +300,73 @@ oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open t
 
 
 
+# keep the following line untranslated
+
 # End of IN-GAME STRINGS.
 
 
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
-# keep the following line untranslated
+toolbar.title=FoxTrick
+toolbar.preferences=Preferences
 
+prefs.title=FoxTrick Preferences
 
+module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
 
+prefs.setup=Setup
+prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
+prefs.setup.locale=Locale
+prefs.setup.dateFormat=Date format
+prefs.setup.country=Country
 
+prefs.storedData.title=Stored preferences
 prefs.storedData.restoreDefault=Restore default preferences (Only preferences, not personal settings.)
+prefs.storedData.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
+prefs.storedData.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
+prefs.storedData.disableAll=Disable all modules
+prefs.storedData.revokePermissions=Revoke all optional permissions (Chrome only)
+
+prefs.disable.title=Disable FoxTrick
+prefs.disable.temporary=Disable temporarily
+prefs.disable.stage=Disable on Stage server
+
+prefs.loadSave.title=Export or import preferences
+prefs.loadSave.export=Export preferences and/or personal settings
+prefs.loadSave.export.prefs=Preferences
+prefs.loadSave.export.notes=Personal settings (Templates, custom links, and transfer filters)
+prefs.loadSave.export.token=OAuth token/secret
+prefs.loadSave.export.notice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
+prefs.loadSave.import=Import preferences (Current preferences will be overwritten)
+prefs.loadSave.import.notice=Paste your saved preferences in the text area and press "Import" to import your preferences.
+
+prefs.additional.title=General options
+prefs.additional.xmlLoad=Load XMLs for extra information from Hattrick
+prefs.additional.smallCopyIcons=Show copy icons in the header instead of sidebar
+prefs.additional.anstoss2Icons=Use Anstoss2 icons for specialties
 prefs.additional.featureHighlight=Highlight FoxTrick's features
+prefs.additional.HTMLDebugLog=Show FoxTrick log on bottom of pages (for debugging)
+
+prefs.feedback.saved=Preferences saved\!
+prefs.feedback.loaded=Preferences loaded\!
+prefs.feedback.dismiss=(click to dismiss this notice)
 
 
-
-
+releaseNotes.show=Show release notes after every update
+releaseNotes.showFor=Show release notes for\:
 releaseNotes.version=Version\:
 
 
 
 prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
 prefs.delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
-
-prefs.additional.anstoss2Icons=Use Anstoss2 icons for specialties
+prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
+prefs.revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
 
 prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
