*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9051 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -411,7 +411,7 @@ foxtrick.HistoryStats.cupwinner.short=VP
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Hráč může být přeřazen za %1 dny/dní v %2.
+YouthPromotes.future=Hráč může být přeřazen za %1 dní (%2).
 YouthPromotes.today=Hráč již může být přeřazen\!
 
 # links
