--- a/content/locale/ka/foxtrick.properties
+++ b/content/locale/ka/foxtrick.properties
@@ -12,7 +12,7 @@ properties.translators=დეველოპერები
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
-direction=მარც->მარჯ
+direction=ltr
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
 
 # Module descriptions
