Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9052 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1058,7 +1058,6 @@ sort.up=Растуће
 sort.down=Опадајуће
 action.clearCache=Обриши кеш
 action.clearCache.title=Брише Фокстрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити застарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
-featureHighlight.title=Кликни да означиш већину Фокстрик додатака на овој страници
 
 # fennec ui
 pageAction.rightSidebar=Прикажи десни бар
@@ -1102,6 +1101,10 @@ api.serverUnavailable=Сервер није доступан
 
 exception.error=Дошло је до грешке: %s
 
+foxtrick.log.header=FoxTrick Log
+# keep the following line untranslated
+foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
+
 # End of IN-GAME STRINGS.
 
 
@@ -1109,17 +1112,18 @@ exception.error=Дошло је до грешке: %s
 # Captions and labels of foxtrick preferences
 
 toolbar.title=Фокстрик
-preferences=Подешавања
-prefs.title=Фокстрик подешавања
-foxtrick.log.header=FoxTrick Log
-# keep the following line untranslated
-foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
-
+toolbar.disableTemporary=Привремено искључи
+toolbar.featureHighlight=Означи све додатке
+toolbar.translationKeys=Прикажи кључеве за превођење
+toolbar.preferences=Подешавања
 status.active=укључен
 status.enabled=укључен, али неактиван на %s
 status.disabled=искључен
 
+prefs.title=Фокстрик подешавања
+
 module.screenshot=Слика са објашњењима опција за модул
+module.link=Овај линк можете ископирати и постовати на форуму као директан линк до подешавања за овај модул
 
 # tabs in preferences page
 #tabs
@@ -1144,29 +1148,37 @@ prefs.setup.dateFormat=Подешавање формата датума
 prefs.setup.country=Подешавање за државу
 
 prefs.storedData.title=Сачувана подешавања
-prefs.loadSave.title=Увези или Извези подешавања
 prefs.storedData.restoreDefault=Ресетуј сва Фокстрик подешавања (само подешавања, не и лична подешавања)
 prefs.storedData.oauth.delete=Обриши 'OAuth' токен за изабрани тим.
 # NOTE - please preserve the braces, inner content will be converted to link
 prefs.storedData.oauth.delete.desc=Ово ће уклонити приступ Фокстрика CHPP фајловима за изабрани тим на Хеттрику само за овај интернет прегледник. Уколико желите да у потпуности укинете ауторизацију за Фокстрик, користите страницу за {управљање CHPP производима}.
 prefs.storedData.disableAll=Искључи све Фокстрик модуле
 prefs.storedData.revokePermissions=Уклони све опционе дозволе (само за Chrome)
-prefs.loadSave.export=Извези Фокстрик подешавања и лична подешавања
+
+prefs.disable.title=Искључи Фокстрик
+prefs.disable.temporary=Привремено искључи Фокстрик
+prefs.disable.stage=Искључи Фокстрик на Стејџ серверу
+
+prefs.loadSave.title=Увези или извези подешавања
+prefs.loadSave.export=Извези Фокстрик подешавања и/или лична подешавања
 prefs.loadSave.export.prefs=Извези Фокстрик подешавања
 prefs.loadSave.export.notes=Извези лична подешавања (белешке, шаблоне за форум и ХТ пошту и персонализоване линкове)
 prefs.loadSave.export.token='OAuth' токен за CHPP ауторизацију
 prefs.loadSave.export.notice=Ископирајте садржај поља са текстом и сачувајте га као фајл, како би сте могли да у будућности увезете подешавања.
 prefs.loadSave.import=Увезите Фокстрик подешавања (Постојећа подешавања ће бити пребрисана!)
 prefs.loadSave.import.notice=Унесите ваша раније сачувана подешавања у поље за текст и кликните на дугме "Увези" да увезете подешавања.
-prefs.disable.title=Искључи Фокстрик
-prefs.disable.stage=Искључи Фокстрик на Стејџ серверу
-prefs.disable.temporary=Привремено искључи Фокстрик
+
+prefs.additional.title=Главне опције
+prefs.additional.xmlLoad=Учитај XML фајлове за додатне информације са Хеттрика
+prefs.additional.smallCopyIcons=Прикажи све иконице за копирање у заглављу уместо у менију са десне стране
+prefs.additional.anstoss2Icons=Користи Anstoss2 сет иконица за приказ специјалности играча
 prefs.additional.featureHighlight=Означи све Фокстрикове додатке
+prefs.additional.translationKeys=Прикажи клуљеве за првођење уместо превода
+prefs.additional.HTMLDebugLog=Прикажи FoxTrick log на дну странице (ради пријаве багова)
+
 prefs.feedback.saved=Подешавања су сачувана!
 prefs.feedback.loaded=Успешно сте увезли подешавања!
 prefs.feedback.dismiss=(кликните да уклоните ову поруку)
-
-prefs.additional.xmlLoad=Учитај XML фајлове за додатне информације са Хеттрика
 
 link.title=Линкови
 link.homepage=Фокстрик портал
@@ -1178,8 +1190,6 @@ link.nightlyChrome=Тест верзија за Google Chrome
 link.nightlyOpera=Тест верзија за Opera
 link.nightlySafari=Тест верзија за Safari
 link.recentChanges=Последње промене
-
-module.link=Овај линк можете да ископирате и искористите на Форуму као линк до овог модула.
 
 releaseNotes.show=Прикажи поруку о променама после ажурирања Фокстрика
 releaseNotes.showFor=Прикажи промене у верзији:
@@ -1198,11 +1208,6 @@ prefs.delete_foxtrick_branches_ask=Да ли сте сигурни да жели
 prefs.delete_oauth_ask=Да ли желите да обришете 'OAuth' токен? 
 prefs.disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?
 prefs.revoke_permissions_ask=Да ли сте сигурни да желите да уклоните све опционе дозволе?
-
-prefs.additional.title=Додатне опције
-prefs.additional.smallCopyIcons=Убаци мале иконице за копирање у заглавље уместо посебног менија са стране
-prefs.additional.anstoss2Icons=Користи 'Anstoss2' колекцију иконица за специјалности играча
-prefs.additional.HTMLDebugLog=Прикажи додатне дебуг излазе на Хеттрик страници (за девелопере)
 
 prefs.permissionsHint=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
 
