*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9056 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Kääntäjät\nripaldo\nPuhuvaKoira\nkirjakas\noff_topic
 
 # Hints:
 # translate the right side of the = sign.
@@ -254,7 +255,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Valinta valitun sisällön kopioimiseksi HT-M
 foxtrick.ContextMenuCopy.Table.desc=Valinta taulukon kopioimiseksi HT-ML-muodossa
 foxtrick.NewMail.desc=Korostaa saapuneet viesit ja foorumiviestit
 foxtrick.NewMail.NotifyMail.desc=Näytä huomautus, jos sinulle on uusia viestejä
+foxtrick.NewMail.NotifyMailSound.desc=Soita ääni uusiin viesteihin
 foxtrick.NewMail.NotifyForum.desc=Näytä huomautus, jos sinulle on uusia foorumivastauksia
+foxtrick.NewMail.NotifyForumSound.desc=Soita ääni uusiin foorumivastauksiin
 foxtrick.CopyYouth.desc=Junnuraporttien ja lähdekoodin kopiointitoimintoja
 foxtrick.CopyYouth.TrainingReport.desc=Mahdollistaa harjoitusraportin kopioimisen. Eli lisää Kopioi Harjoitusraportti (käytettävissä mm. Hattrick Youth Clubissa) painike juniorijoukkueen harjoittelusivulle.
 foxtrick.CopyYouth.ScoutComment.desc=Mahdollistaa skoutin raportin kopioimisen. (käytetään hattrick youthclubissa mm.) Eli lisää painike junioripelaajan sivulle skouttiraportin kopioimista varten.
@@ -383,6 +386,7 @@ foxtrick.RatingsDisplay.HatStats.desc=Hatstatteina
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.icon=Ikoni
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Upotettu Kuva
@@ -574,6 +578,7 @@ matchOrder.options=Asetukset
 matchOrder.staminaDiscount=Kestävyysvähennys
 matchOrder.staminaDiscount.title=Sektoriarvosanoista vähennetään pelaajien tehojen jakautumisen mukaisesti sektoreittain
 matchOrder.summary=Yhteenveto
+matchOrder.tournamentMatch=Turnausottelu
 
 #Skills
 Playmaking=Pelinrakennus
@@ -1098,6 +1103,8 @@ foxtrick.log.header=FoxTrickin logi
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.featureHighlight=Korosta toiminnot
+toolbar.preferences=Asetukset
 status.active=aktiivinen
 status.enabled=sallittu, mutta ei aktiivinen %s\:lla
 status.disabled=lamautettu
@@ -1151,6 +1158,7 @@ prefs.loadSave.import.notice=Liitä tallentamasi asetukset tekstialueessa ja pai
 prefs.additional.title=Lisäasetukset
 prefs.additional.xmlLoad=Lataa XML\:stä lisätietoa Hattrickiin
 prefs.additional.smallCopyIcons=Näytä pienet kopiointi-ikonit otsakkeissa sen sijaan että kopiointi-ikonit olisi erillisessä sivuboxissa
+prefs.additional.featureHighlight=Korosta FoxTrickin toiminnot
 prefs.additional.HTMLDebugLog=Näytä Foxtrick-loki sivujen lopussa (testaamiseen)
 
 prefs.feedback.saved=Asetukset tallennettu\!
@@ -1170,6 +1178,7 @@ link.recentChanges=Viimeisimmät muutokset
 
 releaseNotes.show=Näytä julkaisutiedot Foxtrickin päivityksen jälkeen
 releaseNotes.showFor=Show release notes for\:
+releaseNotes.version=Versio\:
 
 about.copyright=Tekijänoikeudet
 about.maintainers=Ylläpitäjät
