--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -265,9 +265,20 @@ foxtrick.ForumStripHattrickLinks.desc=Supprime le serveur des liens internes pou
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Pas de confirmation avant le changement des liens.
 foxtrick.RapidId.desc=Ajoute une zone de selection à la page principale pour rechercher par leur identifiant les équipes, les joueurs, etc...
 foxtrick.SeriesFlags.Guestbook.desc=Afficher dans le livre d'or
+foxtrick.HTMSPoints.desc=Affichage des points d'entrainement du joueur déterminé par le tableau de compétences HTMS
+foxtrick.HTMSPoints.AddToPlayer.desc=Affichage sur la page du joueur
+foxtrick.HTMSPoints.AddToSearchResult.desc=Affichage sur la page de résultat de recherche de transfert
+foxtrick.HTMSPoints.AddToPlayerList.desc=Affichage sur la page de la liste des joueurs
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afficher le lien vers l'équipe nationale du joueur international
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Masquer le Secrétaire s'il n'a rien à signaler
+foxtrick.MyMonitor.desc=Voir les derniers matchs des amis et/ou des adversaires sur la page "mon Hattrick"
 foxtrick.MyMonitor.TeamIcons.desc=Afficher le logo des équipes
 foxtrick.MarkAllAsRead.desc=Un bouton pour marquer tous les sujets dans tous les forums comme lus
+foxtrick.ShowFriendlyBooked.desc=Afficher si une équipe a organisé un match amical dans le classement de la poule
+foxtrick.ShowLineupSet.desc=Mettre en évidence les équipes victorieuses et/ou les équipes qui ont préparées leur composition et/ou les équipes sans manager dans le classement et dans le tableau des résultats de la poule
 foxtrick.ShowLineupSet.LineupSet.desc=Mettre en évidence les équipes qui ont préparé leur composition
+foxtrick.ShowLineupSet.Ownerless.desc=Mettre en évidence les équipes sans manager
+foxtrick.ShowLineupSet.Winning.desc=Mettre en évidence les équipes victorieuses
 foxtrick.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mobiles
 foxtrick.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
 foxtrick.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
@@ -287,6 +298,7 @@ foxtrick.EmbedMedia.EmbeddedImage=Image incrustée
 #icons
 foxtrick.ExtraShortcuts.statistics=Statistiques
 foxtrick.ExtraShortcuts.transfers=Enchères en cours
+foxtrick.ExtraShortcuts.ManageCHPP=Gérer vos produits CHPP
 foxtrick.ExtraShortcuts.prefs=Préférences
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick préférences
 
@@ -372,6 +384,9 @@ forumPreview.send=Envoyer
 
 #Forums
 foxtrick.CopyPostID=Copie l'identifiant du message dans le presse-papiers
+CopyPosting=Copier coller dans le style %s
+CopyPosting.abbr=Copier dans le style %s
+CopyPosting.style.wiki=wiki
 CopyPosting.style.last=dernier
 
 ForumYouthIcons.label=Équipe junior
@@ -385,6 +400,7 @@ ForumYouthIcons.youthseries=Insérer un lien vers une ligue
 ForumOtherIcons.label=Autres
 
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Insérer la citation
 ForumSpecialBBCode.br=Ajouter une ligne de séparation
 ForumSpecialBBCode.user=Insérer un lien vers un utilisateur
 ForumSpecialBBCode.kit=Insérer un lien vers une tenue de match
@@ -392,6 +408,7 @@ ForumSpecialBBCode.article=Insérer un lien vers un article Hattrick Press
 ForumSpecialBBCode.clock=Insérer un horodatage
 ForumSpecialBBCode.spoiler=Insérer un texte caché (spoiler)
 ForumSpecialBBCode.pre=Insérer une balise de texte pré-formatté ('pre')
+ForumSpecialBBCode.enterSeparator=Entrez un séparateur personnalisé
 
 
 
