Russian translation update to r9058
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9059 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=ru-RU
-properties.version=r9044
+properties.version=r9058
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -1058,7 +1058,6 @@ sort.up=По убыванию
 sort.down=По возрастанию
 action.clearCache=Очистить кэш
 action.clearCache.title=Очистка Xml-кэша FoxTrick. FoxTrick по мере надобности скачивает дополнительную информацию с серверов Hattrick. До тех пор, пока Вы не закрыли браузер, FoxTrick будет использовать локально сохранённые копии этих данных. В некоторых (достаточно редких) случаях эти данные становятся устаревшими, так что очистите кэш, если хотите, чтобы FoxTrick скачал дополнительные данные заново.
-featureHighlight.title=Нажмите для выделения цветом изменений, которые FoxTrick вносит на страницу
 
 # fennec ui
 pageAction.rightSidebar=Показывать правую колонку
@@ -1102,6 +1101,10 @@ api.serverUnavailable=Сервер недоступен
 
 exception.error=Ошибка %s
 
+foxtrick.log.header=Протокол работы FoxTrick
+# keep the following line untranslated
+foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
+
 # End of IN-GAME STRINGS.
 
 
@@ -1109,17 +1112,18 @@ exception.error=Ошибка %s
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
-preferences=Настройки
-prefs.title=Настройки FoxTrick
-foxtrick.log.header=Протокол работы FoxTrick
-# keep the following line untranslated
-foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
-
-status.active=включен
+toolbar.disableTemporary=Временное отключение
+toolbar.featureHighlight=Подсветить изменения
+toolbar.translationKeys=Показывать непереведённые фразы
+toolbar.preferences=Настройки
+status.active=включён
 status.enabled=разрешён, но не включен для %s
 status.disabled=запрещён
 
+prefs.title=Настройки FoxTrick
+
 module.screenshot=Снимок экрана
+module.link=Вы можете скопировать и вставить эту ссылку в форум для перенаправления сюда
 
 # tabs in preferences page
 #tabs
@@ -1138,35 +1142,43 @@ tab.changes=Изменения
 tab.help=Помощь
 
 prefs.setup=Установки
-prefs.setup.desc=Эти параметры были определены FoxTrick-ом. Если они неверны, {пожалуйста, сообщите нам}.
+prefs.setup.desc=Эти значения были автоматически определены FoxTrick-ом. Если они неверны, {пожалуйста, сообщите нам}.
 prefs.setup.locale=Язык
 prefs.setup.dateFormat=Формат даты
 prefs.setup.country=Страна
 
 prefs.storedData.title=Сохранённые настройки
-prefs.loadSave.title=Импорт и экспорт настроек
-prefs.storedData.restoreDefault=Восстановить настройки FoxTrick по умолчанию (только настройки, не трогая личные данные)
+prefs.storedData.restoreDefault=Восстановить настройки FoxTrick по умолчанию (только настройки, не трогая личные данные).
 prefs.storedData.oauth.delete=Удалить OAuth-пару ключ/шифр для выделенной команды.
 # NOTE - please preserve the braces, inner content will be converted to link
-prefs.storedData.oauth.delete.desc=Сработает только для этой инсталляции браузера. Для запрета доступа FoxTrick'а к данным команды используйте настройки {приложений CHPP}.
+prefs.storedData.oauth.delete.desc=Удаление сработает только для этой инсталляции браузера. Для запрета доступа FoxTrick'а к данным команды используйте настройки {приложений CHPP}.
 prefs.storedData.disableAll=Отключить все модули
 prefs.storedData.revokePermissions=Аннулировать все дополнительные разрешения (только в Chrome)
-prefs.loadSave.export=Экспорт настроек и/или личных данных
-prefs.loadSave.export.prefs=Настройки
-prefs.loadSave.export.notes=Личные предпочтения (шаблоны, собственные ссылки и фильтры трансферов)
-prefs.loadSave.export.token=OAuth-пара ключ/шифр
-prefs.loadSave.export.notice=Скопируйте содержимое в текстовом поле и сохраните в качестве файла для возможности импортировать настройки в будущем
-prefs.loadSave.import=Импорт настроек (текущие настройки будут перезаписаны)
-prefs.loadSave.import.notice=Вставьте сохранённые настройки в текстовое поле и нажмите кнопку "Импорт" для импорта настроек
-prefs.disable.title=Отключить Foxtrick
-prefs.disable.stage=Отключить Foxtrick на сервере Stage
+
+prefs.disable.title=Отключить FoxTrick
 prefs.disable.temporary=Временное отключение
-prefs.additional.featureHighlight=Подсвечивать изменения, сделанные FoxTrick-ом
+prefs.disable.stage=Отключить на сервере Stage
+
+prefs.loadSave.title=Экспорт и импорт настроек
+prefs.loadSave.export=Экспорт настроек и/или личных предпочтений
+prefs.loadSave.export.prefs=Настройки
+prefs.loadSave.export.notes=Личные предпочтения (шаблоны, собственные ссылки и фильтры для трансферов)
+prefs.loadSave.export.token=OAuth-пара ключ/шифр
+prefs.loadSave.export.notice=Скопируйте содержимое текстового поля и сохраните в качестве файла для возможности импортировать настройки в будущем.
+prefs.loadSave.import=Импорт настроек (текущие настройки будут перезаписаны)
+prefs.loadSave.import.notice=Вставьте сохранённые в файле настройки в это текстовое поле и нажмите кнопку "Импорт" для импорта настроек.
+
+prefs.additional.title=Основные параметры
+prefs.additional.xmlLoad=Загружать CHPP-xml файлы с дополнительными данными из Hattrick
+prefs.additional.smallCopyIcons=Размещать значки копирования в заголовке вместо боковой панели
+prefs.additional.anstoss2Icons=Использовать значки от Anstoss2 для специализаций игроков
+prefs.additional.featureHighlight=Подсветка изменений, сделанных на странице FoxTrick-ом
+prefs.additional.translationKeys=Показывать непереведённые фразы вместо переведённых
+prefs.additional.HTMLDebugLog=Показывать протокол работы FoxTrick в нижней части страниц (для отладки)
+
 prefs.feedback.saved=Настройки сохранены!
 prefs.feedback.loaded=Preferences loaded!
 prefs.feedback.dismiss=(нажмите для скрытия этого сообщения)
-
-prefs.additional.xmlLoad=Загрузить XML с дополнительной информацией из Hattrick
 
 link.title=Ссылки
 link.homepage=Домашняя страница
@@ -1179,11 +1191,9 @@ link.nightlyOpera=Промежуточные сборки для Opera
 link.nightlySafari=Промежуточные сборки для Safari
 link.recentChanges=Последние изменения
 
-module.link=Вы можете скопировать и вставить эту ссылку в сообщение форума для перенаправления сюда
-
 releaseNotes.show=Показывать информацию о выпуске после каждого обновления FoxTrick
 releaseNotes.showFor=Показать информацию о выпуске релиза:
-releaseNotes.version=Версия
+releaseNotes.version=Версия:
 
 about.copyright=Copyright
 about.maintainers=Лидеры разработки
@@ -1191,18 +1201,13 @@ about.developers=Разработчики
 about.translators=Переводчики
 about.designers=Художники
 
-prefs.view.by.category=По категориям
+prefs.view.by.category=Модули по категориям
 prefs.view.by.page=По последним открытым страницам HT
 
 prefs.delete_foxtrick_branches_ask=Вы действительно хотите восстановить значения по умолчанию?
 prefs.delete_oauth_ask=Удалить пару OAuth ключ/шифр для команды с Id %s?
 prefs.disable_all_foxtrick_modules_ask=Вы уверены, что хотите отключить все модули Foxtrick?
 prefs.revoke_permissions_ask=Вы уверены, что хотите аннулировать все дополнительные разрешения?
-
-prefs.additional.title=Основные параметры
-prefs.additional.smallCopyIcons=Копия значков в заголовке вместо отдельного места на боковой панели
-prefs.additional.anstoss2Icons=Использовать значки от Anstoss2 для специализаций игроков
-prefs.additional.HTMLDebugLog=Показывать протокол работы FoxTrick в нижней части страниц (для отладки)
 
 prefs.permissionsHint=Модулю %s нужно разрешение для работы, дайте ему доступ в следующем диалоге. Если Вы откажете, данная функция модуля будет отключена.
 
