*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9060 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -35,6 +35,7 @@ foxtrick.SeniorTeamShortCuts.AllPages.desc=הצג בכל הדפים
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
+foxtrick.CopyMatchID.desc=לחיצה על הסמל תעתיק את מספר המשחק במסגרת ליגה/גביע/ידידות/טורניר בדף המשחקים או בארכיון המשחקים. יעבוד עבור תומכים גם בדף ה-"ראש בראש" (בלשוניות "משחקים אחרונים" ו"היסטוריה")
 foxtrick.SeasonStats.desc=הצגת סטטיסטיקה מסוימת בדפי ארכיון המשחקים
 foxtrick.LeagueNewsFilter.desc=מסנן המציג חדשות ליגה מסוג מסוים
 foxtrick.LeagueNewsFilter.all.desc=הצג את כל החדשות
@@ -84,25 +85,65 @@ foxtrick.TeamStats.TransferListed.label=ברשימת ההעברות
 #season stats
 #note to translators. use abreviations of league table where applicable
 
+foxtrick.seasonstats.home=ב
+foxtrick.seasonstats.away=ח
+foxtrick.seasonstats.league=משחקי ליגה
+foxtrick.seasonstats.friendly=משחקי ידידות
+foxtrick.seasonstats.cup=משחקי גביע
+foxtrick.seasonstats.masters=משחקי מאסטרס
 
 
 #Newsfeed filter
+foxtrick.LeagueNewsFilter.Filter=מסנן חדשות\:
+foxtrick.LeagueNewsFilter.all=הכל
+foxtrick.LeagueNewsFilter.friendlies=משחקי ידידות ומאמנים שהוחלפו
 foxtrick.LeagueNewsFilter.transfers=העברות
 foxtrick.LeagueNewsFilter.lineup_changes=שינויים בהרכב
 
 # FoxtrickAddLeaveConfButton
+leave_conf_button_alert=לחץ על לחצן "שמור" בדף הבא כדי לעזוב את הפורום הזה
+leave_conf_button=עזוב פורום
 
+forum.preferences=העדפות פורום
 
 # ForumTemplates
+make_template_from_post=הפוך ההודעה לתבנית
+show_templates=הצג תבניות
+hide_templates=הסתר תבניות
+template_exists=תבנית כבר קיימת או ריקה
+template_title=שם תבנית\:
+template_title_illegal=אסור להשתמש בכותרות בסוגריים מרובעים
+delete_template_ask=מחיקת תבנית?
 
 #PostPreview
+show_preview_from_post=תצוגה מקדימה של ההודעה
+preview=תצוגה מקדימה
+forumPreview.send=שלח
 
 #Forums
+foxtrick.CopyPostID=העתק מספר ההודעה ללוח
+CopyPosting=העתק הודעה בסגנון %s
+CopyPosting.abbr=העתק בסגנון %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=ויקי
+CopyPosting.style.raw=לא מסודר
+CopyPosting.style.last=האחרון
 
+ForumYouthIcons.label=קישורי נוער
 ForumYouthIcons.labelTournament=טורנירים
+ForumYouthIcons.labelToolbar=קישורים ראשיים
+ForumYouthIcons.youthplayerid=הוספת תגית שחקן נוער.
+ForumYouthIcons.youthteamid=הוספת תגית קבוצת הנוער.
+ForumYouthIcons.youthmatchid=הוספת תגית משחק הנוער.
+ForumYouthIcons.youthseries=הוספת תגית ליגת הנוער.
 
+ForumOtherIcons.label=אחר
+ForumOtherIcons.debug=הוסף יומן איתור הבאגים של FoxTrick.
+ForumOtherIcons.settings=הוספת הגדרות FoxTrick.
 
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=הוסף ציטוט
+ForumSpecialBBCode.br=הוסף מעבר שורה
 
 
 
@@ -131,15 +172,65 @@ match.type.friendly=משחק ידידות
 
 #Skills
 
+HTMS_Ability.abbr=יכולת
+HTMS_Potential.abbr=פוטנציאל
 
+PlayerCategory=קטגוריית השחקן
+PlayerCategory.abbr=קט'
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
+categories.GK=ש'
+categories.WB=מ'
+categories.CD=ב'
+categories.W=קיצ'
+categories.IM=קשר
+categories.FW=ח'
+categories.S=מח'
+categories.R=ע
+categories.E1=נ1
+categories.E2=נ2
 
+match.pos.kp=שוער
+match.pos.kp.abbr=שו'
+match.pos.lb=מגן שמאלי
+match.pos.lb.abbr=מ"ש
+match.pos.lcd=בלם שמאלי
+match.pos.lcd.abbr=ב"ש
+match.pos.mcd=בלם מרכזי
+match.pos.mcd.abbr=ב"מ
+match.pos.rcd=בלם ימני
+match.pos.rcd.abbr=ב"י
+match.pos.rb=מגן ימני
+match.pos.rb.abbr=מ"י
+match.pos.lw=קיצוני שמאלי
+match.pos.lw.abbr=ק"ש
+match.pos.lcm=קשר שמאלי
+match.pos.lcm.abbr=קש"ש
+match.pos.mcm=קשר מרכזי
+match.pos.mcm.abbr=קש"מ
+match.pos.rcm=קשר ימני
+match.pos.rcm.abbr=קש"י
+match.pos.rw=קיצוני ימני
+match.pos.rw.abbr=ק"י
+match.pos.lf=חלוץ שמאלי
+match.pos.lf.abbr=ח"ש
+match.pos.mf=חלוץ מרכזי
+match.pos.mf.abbr=ח"מ
+match.pos.rf=חלוץ ימני
+match.pos.rf.abbr=ח"י
 
+match.role.setPieces=בועט נייחים
+match.role.setPieces.abbr=מ"נ
+match.role.captain=קפטן
+match.role.captain.abbr=קפטן
 
+match.player.unknown=שחקן בלתי ידוע
 
 General=כללי
 
+PlayerNumber=מספר שחקן
+PlayerNumber.abbr=מס'
 
+TSI=מדד הכישורים
 
 
 Personality=אישיות
@@ -168,6 +259,7 @@ Speciality.abbr=מ"נ
 Last_match=המשחק האחרון
 Last_match.abbr=אחרון
 #following string uses pluralForms
+Last_match_played_as_at=שיחק %1 דקות בתפקיד %2 במשחקו האחרון בתאריך %3.
 
 Bruised=חבול
 Bruised.abbr=חב'
@@ -277,7 +369,15 @@ MatchReportFormat.fullTime=סיום
 MatchReportFormat.extraTime=תוספת זמן
 MatchReportFormat.result=תוצאת המשחק
 
+SpecialPaste.desc=הדבק באמצעות מקש Shift + קליק שמאלי.
 
+foxtrick.tweaks.youthclub=hattrick-youthclub.org
+foxtrick.tweaks.copyskilltable=העתק את טבלת היכולות ללוח (ב-HT-ML)
+foxtrick.tweaks.skilltablecopied=טבלת היכולות הועתקה ללוח.
+foxtrick.tweaks.matchidcopied=מספר המשחק הועתק ללוח.
+foxtrick.tweaks.postidcopied=מספר ההודעה [post\=%s] הועתק ללוח.
+foxtrick.tweaks.postingcopied=הודעה %s הועתקה אל הלוח.
+foxtrick.tweaks.youthstatistics=סטטיסטיקות נוער ht-ys.org
 
 #matches
 foxtrick.matches.attackdefensebars=הגנה vs התקפה
@@ -286,13 +386,18 @@ foxtrick.matches.left=שמאלית
 foxtrick.matches.center=מרכזית
 foxtrick.matches.defense=הגנה
 foxtrick.matches.attack=התקפה
+foxtrick.matches.indfreekick=בעיטות נייחים בלתי ישירות
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
+foxtrick.matches.suppstats=סטטיסטיקות תומכים
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.id=העתק %s\: %i
+copy.link=העתק מיקום קישור ב-HT-ML
+copy.ht-ml=העתק ב-HT-ML
 copy.table=העתק את הטבלה ב-HT-ML
 
 #teampopups
@@ -300,15 +405,25 @@ Manager=מנהל
 Team=קבוצה
 Matches=משחקים
 Players=שחקנים
+last_5_ips=חמש ההתחברויות האחרונות
 Guestbook=ספר אורחים
 SendMessage=שלח הודעה
+Challenge=הזמן
 Achievements=הישגים
 TransferHistory=היסטוריית העברות
+TeamHistory=היסטוריית המועדון
 NextMatch=המשחק הבא
+AddNextMatch=הוסף את המשחק הבא להאטריק חי
 LastLineup=הרכב אחרון
+YouthMatches=משחקי נוער
+more=עוד...
 less=פחות...
+TeamPopupLinks.prefsCaption=העדפות קישורים
 TeamPopupLinks.ShowByDefault=﻿הצג כברירת מחדל
+TeamPopupLinks.ShowOnMore=הצג יותר
+TeamPopupLinks.OpenNewTab=פתח בלשונית חדשה
 
+total_stars=סך כוכבים
 
 # FlagCollectionToMap
 foxtrick.FlagCollectionToMap.ShowMap=הצג מפה
@@ -318,20 +433,37 @@ foxtrick.FlagCollectionToMap.Asia=אסיה
 foxtrick.FlagCollectionToMap.Europe=אירופה
 foxtrick.FlagCollectionToMap.MEast=המזרח התיכון
 foxtrick.FlagCollectionToMap.SAmerica=דרום אמריקה
+foxtrick.FlagCollectionToMap.World=עולם
 
 # SkillTable
+Skill_table=טבלת יכולות
 
 Nationality=אזרחות
+Nationality.abbr=לאום
+Flag=דגל
 Flag.abbr=דגל
 Player=שחקן
 Player.abbr=שחקן
 Age=גיל
 Age.abbr=גיל
 Match=משחק
+Series=ליגה
 
+TransferCompare.abbr=ה"ד
+Bookmark=סימניה
+Bookmark.abbr=סימניה
+Deadline=זמן סיום
+Deadline.abbr=זמן סיום
+CurrentBid=ההצעה הנוכחית
 CurrentBid.abbr=הצע
+CurrentBidder=המציע הגבוה הנוכחי
+CurrentBidder.abbr=המציע
+CurrentBidderShort=המציע הגבוה הנוכחי
+CurrentBidderShort.abbr=הצעה
 
 
+team.status.booked=קבעת משחק ידידות
+ShowFriendlyBooked.ShowFriendlies=הצג משחקי ידידות שנקבעו
 
 
 # TransferSearchResultFilters
@@ -350,10 +482,12 @@ Tournaments=טורנירים
 Tournament=טורניר
 
 # SkillTable
+foxtrick.SkillTable.Switch_view_title=שנה תצוגת טבלה
 foxtrick.SkillTable.detach=נתק
 
 # HTMSPrediction
 HTMSPrediction.prediction=תוצאה צפויה
+HTMSPrediction.winDrawLoss=ניצחון/תיקו/הפסד
 HTMSPrediction.changePrediction=שנה תחזית
 HTMSPrediction.team=קבוצה
 
@@ -373,10 +507,16 @@ CrossTable.graph=גרף עונתי
 CrossTable.noMatches=טרם שוחקו משחקים.
 
 # MyMonitor
+MyMonitor.header=המעקב שלי
 #following string uses pluralForms
 MyMonitor.add=עקוב אחר קבוצה זו
+MyMonitor.remove=הסר קבוצה זו מהמעקב שלי
+MyMonitor.removeTeam=בחר קבוצה להסרה\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, \#%i)
+MyMonitor.type.senior=בוגרת
 MyMonitor.type.youth=נוער
+MyMonitor.type.nt=נבחרת
 
 # MarkAllAsRead
 
@@ -385,18 +525,28 @@ TickerAlert.enable=אפשר
 TickerAlert.sound=צליל
 
 # tickers
+ticker.type.welcome=הודעת ברוכים הבאים
+ticker.type.supporter=התחברות של קבוצה נתמכת
+ticker.type.forum=תגובות בפורום
+ticker.type.transfer=מידע על העברות
+ticker.type.challenge=הזמן
 ticker.type.guestbook=ספר אורחים
 ticker.type.mail=דואר האטריק
+ticker.type.myht=הודעת האטריק שלי
 ticker.type.others=אחרים
 
 # LocalTime
 LocalTime.hattrick=שעון האטריק
+LocalTime.hattrick.title=שעה לפי שעון האטריק. לחץ על השעון כדי לעבור לשעון המקומי
 LocalTime.local=שעון מקומי
+LocalTime.local.title=השעה לפי השעון המקומי. לחצו על השעון כדי לעבור לשעון האטריק.
 
 # Links
 
 #actions
 Copy=העתק
+View=תצוגה
+Switch_view=החלף תצוגה
 Detach=נתק
 showTimeInClub=הצג זמן במועדון
 sort.up=למעלה
@@ -404,6 +554,7 @@ sort.down=למטה
 action.clearCache=נקה מטמון
 
 # fennec ui
+pageAction.mainContent=הצג תוכן ראשי
 pageAction.leftSidebar=\ הצג את כל החדשות
 pageAction.all=הצג הכל
 
@@ -447,6 +598,7 @@ tab.changes=עדכונים
 tab.help=עזרה
 
 
+prefs.storedData.title=העדפות שמורות
 # NOTE - please preserve the braces, inner content will be converted to link
 
 
